[gd_scene load_steps=19 format=3 uid="uid://bidx5ag1w2332"]

[ext_resource type="PackedScene" uid="uid://c7kqjy6kxqklh" path="res://models/platform.tscn" id="1_lbrst"]
[ext_resource type="Script" path="res://scenes/world.gd" id="1_wrxtc"]
[ext_resource type="PackedScene" uid="uid://5lg335vm0kx1" path="res://sprite/player.tscn" id="2_m5he3"]
[ext_resource type="PackedScene" uid="uid://ceee8joiwllom" path="res://models/rigid_body_3d.tscn" id="3_f1a0r"]
[ext_resource type="PackedScene" uid="uid://wmr34eqfnx50" path="res://interact/switch.tscn" id="4_v0jol"]
[ext_resource type="Script" path="res://scenes/switch controler.gd" id="4_xv77l"]
[ext_resource type="Script" path="res://scenes/death.gd" id="5_ec8nr"]
[ext_resource type="PackedScene" uid="uid://wskj872e2n7x" path="res://models/you_died_screen.tscn" id="6_jkhqt"]
[ext_resource type="PackedScene" uid="uid://bnsjh2y0vho7p" path="res://models/explotion.tscn" id="7_kigac"]
[ext_resource type="PackedScene" uid="uid://b0bx3nb7sg5b8" path="res://models/timer.tscn" id="8_o848k"]
[ext_resource type="AudioStream" uid="uid://bd0ybtr8hsyof" path="res://Assets/timer-ticks-314055.mp3" id="11_pdeaj"]
[ext_resource type="AudioStream" uid="uid://dnlfk2uk13mfg" path="res://Assets/explosion-fx-343683.mp3" id="12_0epus"]
[ext_resource type="AudioStream" uid="uid://vbov8g6i8wrj" path="res://Assets/fur-elise-music-box-70375.mp3" id="12_o8atj"]
[ext_resource type="AudioStream" uid="uid://begcgrwwgi0eg" path="res://Assets/drone-pumping-low-frequency-action-background-236507.mp3" id="14_ma60w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_amuyo"]
sky_top_color = Color(0.384314, 0.603922, 1, 1)
sky_horizon_color = Color(0.613725, 0.676471, 0.782353, 1)
ground_bottom_color = Color(0.0705882, 0.101961, 0.129412, 1)
ground_horizon_color = Color(0.613725, 0.676471, 0.782353, 1)

[sub_resource type="Sky" id="Sky_unxjv"]
sky_material = SubResource("ProceduralSkyMaterial_amuyo")

[sub_resource type="Environment" id="Environment_duusg"]
background_mode = 2
sky = SubResource("Sky_unxjv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_wqakt"]
size = Vector3(150, 2, 150)

[node name="world" type="Node3D"]
script = ExtResource("1_wrxtc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_duusg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.845127, -0.313333, 0.433108, 0.487393, -0.784431, 0.383556, 0.219562, 0.535247, 0.815661, 0, 5.49652, 1.3807)
light_color = Color(0.994789, 1, 0.915412, 1)
shadow_enabled = true

[node name="Platform" parent="." instance=ExtResource("1_lbrst")]
transform = Transform3D(0.999998, 0, 0.00205949, 0, 1, 0, -0.00205949, 0, 0.999998, 3.43661, -1.14761, -3.53379)

[node name="player" parent="." instance=ExtResource("2_m5he3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.41552, 2.85684, -4.24458)
visible = false

[node name="switch controler" type="Node3D" parent="."]
transform = Transform3D(0.149414, -0.0176534, -0.988617, 5.15936e-11, 0.999841, -0.0178538, 0.988775, 0.00266762, 0.149391, 2.55602, 0.906953, -10.0115)
script = ExtResource("4_xv77l")

[node name="Switch_2" parent="switch controler" instance=ExtResource("4_v0jol")]
transform = Transform3D(0.211643, 0.21262, -1.93414e-09, -0.212586, 0.211609, 0.00535613, 0.00379595, -0.00377879, 0.299952, 0.674763, -0.463985, -0.778018)
prompt_message = "switch 2"
prompt_action = "click"

[node name="Switch_3" parent="switch controler" instance=ExtResource("4_v0jol")]
transform = Transform3D(0.211643, 0.21262, -1.93414e-09, -0.212586, 0.211609, 0.00535613, 0.00379595, -0.00377879, 0.299952, 0.589683, -0.443279, 0.38151)
prompt_message = "switch 3"
prompt_action = "click"

[node name="Bomb" parent="." instance=ExtResource("3_f1a0r")]
transform = Transform3D(0.149414, -0.0176534, -0.988617, 5.15936e-11, 0.999841, -0.0178538, 0.988775, 0.00266762, 0.149391, 2.55602, 0.906953, -10.0115)
script = null

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.7422, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_wqakt")

[node name="death" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.7422, 0)
script = ExtResource("5_ec8nr")

[node name="you_died" parent="." instance=ExtResource("6_jkhqt")]
visible = false
offset_left = -49.0
offset_top = -207.0
offset_right = -49.0
offset_bottom = -207.0

[node name="Timer" parent="." instance=ExtResource("8_o848k")]
transform = Transform3D(0.00118981, 0.063653, -0.309301, -0.280789, 0.000552886, -0.00127969, 0.000187277, 0.424547, 0.0463756, 2.70013, 1.28157, -9.74791)

[node name="bombs" type="Node3D" parent="."]

[node name="bomb" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.49703, -0.328145, -10.9005)

[node name="bomb2" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.40361, -0.309289, -10.5718)

[node name="bomb3" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.51483, -0.196759, -10.3493)

[node name="bomb4" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.60825, 0.234887, -10.678)

[node name="bomb5" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.35601, 0.053167, -9.28346)

[node name="bomb6" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.46723, 0.751335, -10.458)

[node name="bomb7" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19221, -1.38088, -10.7866)

[node name="bomb8" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.05239, -0.982375, -11.0092)

[node name="bomb9" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.45544, -2.20748, -9.02069)

[node name="bomb10" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.686305, -2.31869, -8.96198)

[node name="bomb11" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 0.937462, -1.45389, -9.68854)

[node name="bomb12" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 0.634403, -1.43503, -9.53076)

[node name="bomb13" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 3.54792, -1.3225, -6.48084)

[node name="bomb14" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 3.85098, -0.890854, -6.63862)

[node name="bomb15" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 1.29063, -1.07257, -7.3182)

[node name="bomb16" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 2.22079, -0.374407, -8.04391)

[node name="bomb17" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 3.29146, 0.352047, -10.7319)

[node name="bomb18" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 4.73064, 0.75055, -9.53255)

[node name="bomb21" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 3.24171, -2.10746, -9.60184)

[node name="bomb22" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 4.88493, -1.24265, -8.92043)

[node name="bomb23" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 4.56212, -1.2238, -9.03238)

[node name="bomb24" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 5.89285, -2.26739, -7.58452)

[node name="bomb25" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 6.21565, -1.83574, -7.47257)

[node name="bomb26" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 4.95141, -2.01746, -9.80042)

[node name="bomb27" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 6.11771, -1.31929, -9.62263)

[node name="bomb28" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 6.49566, -1.74897, -10.4793)

[node name="bomb29" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 6.6121, -1.35046, -8.60946)

[node name="bomb30" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 4.60394, -2.57557, -8.32007)

[node name="bomb31" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568323, 4.61028, -2.68678, -9.46441)

[node name="bomb32" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 6.7445, -2.16687, -7.77467)

[node name="bomb33" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 3.56788, -2.14801, -9.8272)

[node name="bomb34" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 3.61078, -2.03548, -9.58215)

[node name="bomb35" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 1.40544, -1.60384, -7.81866)

[node name="bomb36" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 2.81132, -0.882568, -11.3665)

[node name="bomb37" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, -0.709013, -1.08738, -8.22048)

[node name="bomb38" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, -1.45508, -1.51706, -8.78624)

[node name="bomb39" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 0.391009, -1.11855, -8.46723)

[node name="bomb40" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, 0.693442, -0.191905, -10.8888)

[node name="bomb41" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.958193, 0, -0.286123, 0, 1, 0, 0.286123, 0, 0.958193, -0.418418, -0.303111, -11.1596)

[node name="bomb42" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 1.34535, 0.561691, -11.3912)

[node name="bomb43" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 1.00981, 0.580547, -11.3267)

[node name="bomb44" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 3.37397, -0.308862, -11.1272)

[node name="bomb45" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 3.70951, 0.122784, -11.1917)

[node name="bomb46" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 2.944, -0.492331, -12.5754)

[node name="bomb47" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.449997, -0.0102973, -0.892971, 0.00463398, 0.999949, -0.00919565, 0.893018, 0, 0.450021, 2.20795, -0.591389, -13.0047)

[node name="bomb48" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 2.44849, 0.209562, -13.9355)

[node name="bomb49" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 2.87521, -0.541753, -7.73243)

[node name="bomb50" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 1.46835, -3.39976, -8.22484)

[node name="bomb51" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 2.84791, -2.53496, -7.10175)

[node name="bomb52" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 2.57062, -2.5161, -7.30139)

[node name="bomb53" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 2.32353, -2.40357, -9.52395)

[node name="bomb54" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 3.76141, -1.97192, -9.32432)

[node name="bomb55" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 3.21608, -2.15364, -11.9166)

[node name="bomb56" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 4.28275, -1.45547, -11.4125)

[node name="bomb57" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 4.89001, -1.88515, -12.1252)

[node name="bomb58" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 4.46658, -1.48664, -10.3002)

[node name="bomb59" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 1.29898, -2.71175, -10.5975)

[node name="bomb60" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940384, 0, -0.340117, 1.63247, -2.82296, -11.6922)

[node name="bomb61" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 1.28085, -1.76686, -8.72911)

[node name="bomb62" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.450021, 0, -0.893019, 0, 1, 0, 0.893018, 0, 0.450021, 0.714129, -1.87807, -9.72327)

[node name="bomb19" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 2.12812, -1.63068, -8.86528)

[node name="bomb77" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.340117, 0, -0.940383, 0, 1, 0, 0.940383, 0, -0.340117, 4.42129, -0.27719, -10.9275)

[node name="bomb78" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568322, 4.76862, -0.029803, -9.31042)

[node name="bomb79" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(-0.0568322, 0, -0.998384, 0, 1, 0, 0.998384, 0, -0.0568322, 2.26213, 0.860932, -10.4548)

[node name="bomb20" parent="bombs" instance=ExtResource("7_kigac")]
transform = Transform3D(0.68672, 0, -0.726922, 0, 1, 0, 0.726922, 0, 0.68672, 1.30063, -1.74189, -9.65573)

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = -848.0
offset_top = -603.0
offset_right = -241.0
offset_bottom = -299.0
theme_override_font_sizes/font_size = 30
text = "Two levers wait in shadow’s keep,
One guards silence, one guards sleep.
A single right hand may grant you breath,
But greedy hands will summon death.
Some swear the path runs left to right,
Yet only one will bring you light."

[node name="ticking" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_pdeaj")

[node name="music" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_o8atj")

[node name="explostion" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_0epus")

[node name="drone" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_ma60w")

[connection signal="area_entered" from="Area3D" to="death" method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="death" method="_on_area_3d_body_entered"]
